--- a/zapic/src/main/res/layout-land/fragment_page_offline.xml
+++ b/zapic/src/main/res/layout-land/fragment_page_offline.xml
@@ -5,13 +5,17 @@
     android:layout_height="match_parent"
     android:orientation="horizontal"
     tools:context="com.zapic.android.sdk.OfflinePageFragment">
-    <Button
+    <ImageButton
         android:id="@+id/fragment_page_offline_close"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:text="@string/fragment_page_offline_close" />
+        android:layout_marginStart="@dimen/margin"
+        android:layout_marginTop="@dimen/margin"
+        android:background="?android:selectableItemBackground"
+        android:contentDescription="@string/fragment_page_offline_close"
+        android:src="@drawable/chevron_double_left" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
