Enabled JavaScript/Java communication bridge

--- a/zapic/src/main/res/layout-v21/fragment_page_loading.xml
+++ b/zapic/src/main/res/layout-v21/fragment_page_loading.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffffff"
     tools:context="com.zapic.android.sdk.LoadingPageFragment">
     <ImageButton
         android:id="@+id/fragment_page_loading_close"
