--- a/zapic/src/main/res/values/dimens.xml
+++ b/zapic/src/main/res/values/dimens.xml
@@ -1,16 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="component_zapic_app_bar_close_margin">8dp</dimen>
-    <dimen name="component_zapic_app_bar_elevation">6dp</dimen>
-    <dimen name="component_zapic_app_bar_gradient_height">6dp</dimen>
-    <dimen name="component_zapic_app_bar_height">48dp</dimen>
-    <dimen name="component_zapic_app_bar_logo_size">36dp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="alerter_activity_horizontal_margin">18dp</dimen>
+    <dimen name="alerter_activity_vertical_margin">16dp</dimen>
 
-    <dimen name="component_zapic_toast_elevation">6dp</dimen>
-    <dimen name="component_zapic_toast_icon_size">36dp</dimen>
-    <dimen name="component_zapic_toast_padding">16dp</dimen>
+    <dimen name="alerter_padding_small">4dp</dimen>
+    <dimen name="alerter_padding_half">8dp</dimen>
+    <dimen name="alerter_padding_default">16dp</dimen>
+    <dimen name="alerter_alert_padding">30dp</dimen>
+    <dimen name="alerter_alert_negative_margin_top">-26dp</dimen>
 
-    <dimen name="fragment_zapic_loading_progress_size">32dp</dimen>
+    <dimen name="alerter_progress_bar_size">2dp</dimen>
 
-    <dimen name="fragment_zapic_offline_message_padding">16dp</dimen>
+    <!--Alerts-->
+    <dimen name="alerter_alert_min_height">64dp</dimen>
+    <dimen name="alerter_alert_max_height">84dp</dimen>
+    <dimen name="alerter_alert_icn_size">38dp</dimen>
+
+    <!--Text sizes-->
+    <dimen name="alerter_text_small">14sp</dimen>
+    <dimen name="alerter_text_medium">18sp</dimen>
+
 </resources>
